--- a/desafios/d012 (cordel)/style.css
+++ b/desafios/d012 (cordel)/style.css
@@ -15,6 +15,7 @@
 }
 
 :root {
+    --cor1:#080808;
     --fonte-padrao: 'passion', Arial, Helvetica, sans-serif;
     --fonte-cordel: 'sriracha', cursive; /*alguns usuários relatam o erro da cursive*/
 }
@@ -24,45 +25,6 @@
     padding: 0px;
 }
 
-.wrapper {
-    height: 100vh;
-    overflow-x: hidden;
-    perspective: 2px;
-}
-
-.section {
-    position: relative;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-shadow: 0 0 5px black;
-}
-
-.parallax::after {
-    content: " ";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform: translateZ(-1px) scale(1.5);
-    background-size: 100%;
-    z-index: -1;
-}
-
-.static {
-    background: red;
-}
-
-.bg1::after {
-    background-image: url(imagens/background001.jpg);
-}
-
-.bg2::after {
-    background-image: url(imagens/background002.jpg);
-}
 
 header {
     background-color: rgb(31, 31, 31);
@@ -80,22 +42,77 @@ header > h1 {
 header > p {
     text-align: center;
     color: white;
-    font-family: var(--fonte-padrao);
     letter-spacing: 0.1em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header > p > strong > a {
     text-decoration: none;
     color: white;
     text-align: center;
+ 
+}
+
+body {
+    margin: auto;
+    font-size: 1.3em;
 }
 
 main {
-    padding: 30px;
+    padding: 30px 30px 0px 30px;
+    background-color: azure;
+    overflow: auto;
 }
-
 main > p {
     font-family: var(--fonte-cordel);
-    font-size: 1.5em;
-    padding: 20px 0px 20px 0px;
+    padding: 10px;
+}
+
+.parallax1 {
+    position: relative;
+    background-image: url(imagens/background001.jpg);
+    min-height: 400px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px -30px 0px -30px;
+    box-shadow: inset 4px -7px 29px rgba(0, 0, 0, 0.774);
+}
+
+.parallax2 {
+    position: relative;
+    background-image: url(imagens/background002.jpg);
+    min-height: 400px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px -30px 0px -30px;
+    box-shadow: inset 4px -7px 29px rgba(0, 0, 0, 0.774);
+}
+
+.textofoto {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.521);
+    color: white;
+    padding: 30px;
+    left: 20px;
+    top: 60px;
+    font-family: var(--fonte-cordel);
+    font-size: 1em;
+}
+
+footer {
+    background-color: var(--cor1);
+    padding: 20px;
+    color: white;
+    font-family: Arial;
+    margin: 10px -30px 0px -30px;
+ 
+}
+
+footer > strong > a  {
+    text-decoration: none;
+    color: white;
 }
