--- a/desafios/d012 (cordel)/seguindo a aula/style.css
+++ b/desafios/d012 (cordel)/seguindo a aula/style.css
@@ -61,18 +61,33 @@ section {
 .normal, .normal p {
     background-color: white;
     color: black;
-    margin: 0px 0px 30px 0px; /*diferente do guanabara*/
+    padding-bottom: 2em;
 }
 
 .imagem {
     background-color: rgb(24, 23, 23);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.452);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.651);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
