--- a/desafios/d015 (redes_sociais)/style.css
+++ b/desafios/d015 (redes_sociais)/style.css
@@ -1,26 +1,41 @@
 @charset "UTF-8";
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
-    position: relative;
     background: url(imagens/fundo-madeira.jpg) center no-repeat fixed;
     background-size: cover;
 }
 
-div#celular {
+div {
     position: relative;
-    left: 40%;
-    right: 50%;
-    width: 10vw;
-    height: 99vh;
+    margin: auto;
+    width: 311px;
+    height: 627px;
+
 }
 
-#tela {
+iframe {
     position: absolute;
     margin: auto;
-    left: 18.6%;
-    top: 13%;
-    right: 50%;
-    width: 21.1vw;
-    height: 73.5vh;
-    background-color: blue;
+    width: 289px;
+    height: 469px;
+    top: 12.9%;
+    left: 3.8%;
 }
+
+section#botoes {
+    position: relative;
+}
+
+#facebook {
+    position: absolute;
+    border-radius: 50%;
+    width: 50px;
+    top: -59vh;
+    left: 92vw;
+}
+
