Utilizando várias media queries  de forma dinâmica com mobile first

--- a/ex026 (media query)/mq004/estilos/style.css
+++ b/ex026 (media query)/mq004/estilos/style.css
@@ -15,9 +15,12 @@ body, html {
 }
 
 body {
-    background: black url(../imagens/back-phone.jpg) no-repeat;
-    background-size: cover;
+    background-color: black;
+    background-image: url(../imagens/back-phone.jpg);
     background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 main {
