--- a/ex026 (media query)/mq004/estilos/media-query.css
+++ b/ex026 (media query)/mq004/estilos/media-query.css
@@ -2,6 +2,81 @@
 
 /*demais mídias*/
 
-@media print {
-    
+/*typical device breakpoints
+W3C (mudam com o tempo)
+Pequenas telas: a 600px
+Celular: 600px a 768px
+Tablet: 768px a 992px
+Desktop: 992px a 1200px
+Telas grandes: acima de 1200px
+*/
+
+
+@media print { /*IMPRESSÃO*/
+
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+    body {
+        background-image: url(../imagens/back-print.jpg); /*não imprime background no media print*/
+
+    }
+
+    main {
+        width: 90vw;
+        border: 2px solid black;
+    }
+    main::after {
+        content: 'Essa impressão foi feita pelo site Curso em Vídeo';
+        text-decoration: overline;
+    }
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 768px) and (max-width:992px) {
+    /*TABLET*/
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+
+    }
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) { /*DESKTOP*/
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 1200px) { /*GRANDES TELAS*/
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
+
+    main {
+        width: 700px;
+    }
 }
