--- a/desafios/d015 (tela de login)/estilos/style.css
+++ b/desafios/d015 (tela de login)/estilos/style.css
@@ -7,9 +7,11 @@
 }
 
 :root {
-    --cor1: #eee199;
-    --cor2: #a8eeff;
-    --cor3: rgb(228, 255, 221);
+    --cor1: #252525;
+    --cor2: #ffffff;
+    --cor3: #747474;
+    --cor4: #bcebf7;
+    --cor5:#00fff2;
     --font1: 'Hindi', sans-serif, Arial, Helvetica;
 }
 
@@ -42,14 +44,25 @@ div#caixa {
     margin: auto;
     margin-top: 50px;
     border-radius: 30px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.541);
 }
 
-#campo {
-    background-color: var(--cor1);
+h1 {
+    padding: 10px;
+}
+
+.campo {
+    background-color: var(--cor4);
+    margin: 5px 30px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.541);
 }
 
 .icon {
+    position: relative;
     width: 30px;
+    top: 10px;
+    
 }
 
 #iemail, #isenha {
@@ -58,12 +71,28 @@ div#caixa {
     border-radius: 10px;
     font-size: 0.9em;
     font-weight: bold;
+    margin: 5px;
+    
 }
 
-#entrar {
-    background-color: var(--cor2);
+#botaoentrar {
+    background-color: var(--cor5);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.541);
+    padding: 10px 60px;
+    font-size: 1.1em;
+    border-radius: 10px;
+    font-weight: bolder;
 }
 
-#esqueci {
-    background-color: var(--cor3);
+#botaoesqueci {
+    background-color: var(--cor4);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.541);
+    padding: 5px;
+    font-size: 1em;
+    border-radius: 10px;
+    
+}
+
+#botaoentrar:hover, #botaoesqueci:hover {
+    cursor: pointer;
 }
