--- a/desafios/d015 (tela de login)/estilos/style.css
+++ b/desafios/d015 (tela de login)/estilos/style.css
@@ -7,18 +7,20 @@
 }
 
 :root {
-    --cor1: #252525;
-    --cor2: #ffffff;
-    --cor3: #747474;
-    --cor4: #bcebf7;
-    --cor5:#00fff2;
+    --cor1: #0d1b2a;
+    --cor2: #e0e1dd;
+    --cor3: #1b263b;
+    --cor4: #97b0d1;
+    --cor5:#e0e1dd;
     --font1: 'Hindi', sans-serif, Arial, Helvetica;
+
 }
 
 * {
     margin: 0px;
     padding: 0px;
     font-family: var(--font1);
+    transition: ease all .5s;
 }
 
 body {
@@ -29,10 +31,7 @@ body {
 div > img {
     width:300px;
     border-radius: 30px 30px 0px 0px;
-}
-
-#bem-vindo {
-    margin: 15px;
+    transition: ease all .5s;
 }
 
 div#caixa {
@@ -49,6 +48,12 @@ div#caixa {
 
 h1 {
     padding: 10px;
+    color: var(--cor5);
+}
+
+#bem-vindo {
+    margin: 15px;
+    color: var(--cor5);
 }
 
 .campo {
@@ -95,4 +100,101 @@ h1 {
 
 #botaoentrar:hover, #botaoesqueci:hover {
     cursor: pointer;
+}
+
+
+@media screen and (min-width: 900px){
+
+    div#caixa {
+        position: relative;
+        width: 650px;
+        height: 300px;
+        background-color: var(--cor3);
+        text-align: center;
+        margin: auto;
+        margin-top: 50px;
+        border-radius: 30px;
+        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.541);
+    }
+    div > img {
+        position: relative;
+        left: -180px;
+        height: 300px;
+        width: 300px;
+        border-radius: 30px 0px 0px 30px;
+    }
+
+    h1 {
+        position: relative;
+        top: -290px;
+        right: -144px;
+        padding: 10px;
+        color: var(--cor5);
+    }
+
+    #bem-vindo {
+        position: relative;
+        top: -290px;
+        right: -144px;
+        margin: 15px;
+        color: var(--cor5);
+    }
+    
+    .campo {
+        display: block;
+        position: relative;
+        width: 235px;
+        top: -290px;
+        right: -324px;
+        background-color: var(--cor4);
+        margin: 5px 30px;
+        border-radius: 10px;
+        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.541);
+    }
+    
+    .icon {
+        position: relative;
+        width: 30px;
+        top: 10px;
+        
+    }
+    
+    #iemail, #isenha {
+        background-color: var(--cor2);
+        padding: 10px;
+        border-radius: 10px;
+        font-size: 0.9em;
+        font-weight: bold;
+        margin: 5px;
+        
+    }
+    
+    #botaoentrar {
+        position: relative;
+        top: -290px;
+        right: -151px;
+        background-color: var(--cor5);
+        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.541);
+        padding: 3px 60px;
+        font-size: 1em;
+        border-radius: 10px;
+        font-weight: bolder;
+     
+    }
+    
+    #botaoesqueci {
+        position: relative;
+        top: -290px;
+        right: -151px;
+        background-color: var(--cor4);
+        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.541);
+        padding: 3px;
+        font-size: 0.9em;
+        border-radius: 10px;
+        
+    }
+    
+    #botaoentrar:hover, #botaoesqueci:hover {
+        cursor: pointer;
+    }
 }
